# everyfind

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  build.sh  everyfind.desktop  pyproject.toml  release-notes.md  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml
assets/: everyfind.appdata.xml
assets/screenshots/: everyfind-main
debian/: changelog  control  copyright  install  rules
everyfind/: actions.py  cli.py  i18n.py  indexer.py  settings.py  ui.py  ui_settings.py
everyfind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
everyfind/plugins/: __init__.py  ocr_plugin.py
locale/: README.txt
locale/de/LC_MESSAGES/: everyfind.mo
locale/en/LC_MESSAGES/: everyfind.mo
locale/es/LC_MESSAGES/: everyfind.mo
locale/fr/LC_MESSAGES/: everyfind.mo
locale/pl/LC_MESSAGES/: everyfind.mo
po/de/: everyfind.po
po/en/: everyfind.po
po/es/: everyfind.po
po/fr/: everyfind.po
po/pl/: everyfind.po
release-assets/: README.md  everyfind_0.1.0-1_all.deb
scripts/: run_gui.py  run_gui.sh
tests/: test_i18n.py  test_indexer.py  test_indexer_filters.py  test_indexer_multi_paths.py  test_ui_dialogs.py
